--- a/observatorio.saude.Tests/observatorio.saude.Tests.csproj
+++ b/observatorio.saude.Tests/observatorio.saude.Tests.csproj
@@ -14,9 +14,13 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-        <PackageReference Include="Moq" Version="4.20.72"/>
-        <PackageReference Include="xunit" Version="2.9.3"/>
-        <Using Include="Xunit"/>
+        <PackageReference Include="Moq" Version="4.20.72" />
+        <PackageReference Include="xunit" Version="2.9.3" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <Using Include="Xunit" />
 
         <PackageReference Include="FluentAssertions" Version="8.8.0" />
         <PackageReference Include="JunitXml.TestLogger" Version="7.0.2">
@@ -24,12 +28,10 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
 
-        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.11" />
-
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\observatorio.saude\observatorio.saude.csproj"/>
+        <ProjectReference Include="..\observatorio.saude\observatorio.saude.csproj" />
     </ItemGroup>
 
 </Project>
